--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     a {
     display: inline-block; 
     padding: 10px 20px;
-    background-color: #b92d2d;
+    background-color: #271175;
     color: #ffffff;
     text-decoration: none; 
     border-radius: 5px; 
@@ -16,7 +16,7 @@
 
    
     .custom-link:hover {
-        background-color: #7e3b3b;
+        background-color: #150d46;
         color: silver
     }
 
@@ -35,8 +35,14 @@
     .title-box {
         background-color: rgba(0, 0, 0, 0.5);
         max-width: fit-content;
-        border: 10px solid #751111;
+        border: 10px solid #271175;
         opacity: 0.9
+    }
+
+    .about-background {
+        background-color: #1ea3d8;
+        line-height: 1.5;
+        padding: 35px;
     }
 
     </style>
@@ -50,7 +56,7 @@
         <br><br><br><br><br><br><br>
         <center>
         <div class="title-box">
-            <font size=+7 color="#D21111" face="Lucida Sans Unicode">
+            <font size=+9 color="#2011BF" face="Lucida Sans Unicode">
                 <h1> &nbspTrentin Yee&nbsp </h1>
             </font>
         </div>
@@ -66,22 +72,23 @@
             <a href="https://drive.google.com/file/d/1EmI-jdw72RHghYO9gnaVmbvd6aVjrZfW/view?usp=sharing" class="custom-link">Resume</a></h2></vw>
         </center>
 
-        <br><br>
+    
     </section>
     </div>
-    
-    <br>
-
 
     <!-- About -->
 
-    <p>
-        <div id="about"><h2> About </h2></div>
+    <section class="about-background"">
+        <font size=+3 color="#DDDDFF" face="Lucida Sans Demibold">
+            <div id="about"><h2> About </h2></div>
+        </font>
 
+        <font size=+2 color="#FFFFF" face="Lucida Sans">
         I am a junior attending UCSC for Computer Science, currently looking for experience in various fields so that I can decide my specification.
         Two of the current paths I am interested in exploring are systems and web devolopment, and although I'm not exactly in the right UCSC major for it I'd love to get into game development at least as a hobby.
         Video games are my main interest and hobby outside of coding, but I do like to dabble in various other forms of media, both creating and consuming.
-    </p>
+        </font>
+    </section>
 
     <br>
 
